<resources>
    <string name="app_name">HomeworkForZotak</string>
    <string name="add_menu_item_button">Add Snack</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="nonvegetarian">Not Vegetarian</string>
    <string name="menu">Menu</string>
    <string name="filter">Filters</string>
    <string name="submit">Submit</string>
    <string name="review_order">Review Order</string>
    <string name="order">Order</string>
    <string name="cancel">Cancel</string>
    <string name="remove">Remove</string>
    <string name="temp_name">Name</string>
    <string name="add_item">Add Item</string>
    <string name="name">Name</string>
</resources>