<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_scroll_container"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        tools:context=".ui.main.MainFragment">

        <TextView
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu"
            android:textSize="35sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/filter"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menu"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/vegetarianTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vegetarian"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:textSize="20sp"
            android:textColor="@color/green"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filter"
            />

        <CheckBox
            android:id="@+id/vegetarianCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintStart_toEndOf="@+id/vegetarianTV"
            app:layout_constraintTop_toBottomOf="@+id/filter"
            />

        <TextView
            android:id="@+id/nonVegetarianTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nonvegetarian"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="4dp"
            android:textSize="20sp"
            android:textColor="@color/red"
            app:layout_constraintEnd_toStartOf="@+id/nonVegetarianCheckBox"
            app:layout_constraintTop_toBottomOf="@+id/filter"
            />

        <CheckBox
            android:id="@+id/nonVegetarianCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filter"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/menu_recycler_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/nonVegetarianCheckBox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/submit"
            android:backgroundTint="@color/green"
            app:layout_constraintTop_toBottomOf="@+id/menu_recycler_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <Button
            android:id="@+id/addMenuItemButton"
            android:text="@string/add_menu_item_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>